--- a/Proj_CRUD_ADONET/Projeto/Views/Funcionario/AdicionarFuncionario.cshtml
+++ b/Proj_CRUD_ADONET/Projeto/Views/Funcionario/AdicionarFuncionario.cshtml
@@ -1,27 +1,16 @@
 ﻿@model Projeto.Models.Funcionario
 
-@{
-    ViewBag.Title = "AdicionarFuncionario";
-}
-
-<h2>AdicionarFuncionario</h2>
-
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Funcionario</h4>
+        <h4>Adicionar Funcionario</h4>
+        <div>
+            @Html.ActionLink("Voltar para Lista", "SelecionarFuncionarios")
+        </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdFuncionario, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IdFuncionario, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IdFuncionario, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,15 +54,16 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10" style="color:green">
+                @ViewBag.Message
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
